[package]
name = "spotifyimport"
version = "0.1.0"
authors = ["Nishanth Shanmugham <nishanths@utexas.edu>"]
edition = "2018"
default-run = "spotifyimport"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "accesstoken"
path = "src/bin/accesstoken/main.rs"

[[bin]]
name = "spotifyimport"
path = "src/bin/spotifyimport/main.rs"

[dependencies]
anyhow = "1.0"
cookie = "0.14"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version="0.10", features = ["json"] }
tokio = { version="0.2", features = ["macros"] }
log = "0.4"
logosaurus = "0.3"
serde_json = { version = "1.0" }
spmc = "0.3"
